feat: restructure documentation; remove old guides, add new getting started and installation guides, and update links

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -8,28 +8,28 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Get Started
-      link: /docs/getting-started/
+      link: /guides/getting-started/
       icon: right-arrow
     - text: API Reference
-      link: /docs/api-reference/
+      link: /installation/api-reference/
       icon: right-arrow
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Next steps
 
 <CardGrid stagger>
-    <Card title="Installation" icon="download">
-        Learn how to install GaiaGisService in your Angular project.
-    </Card>
-    <Card title="Getting Started" icon="rocket">
-        Follow the guide to get started with GaiaGisService.
-    </Card>
-    <Card title="API Reference" icon="book">
-        Explore the API documentation for GaiaGisService.
-    </Card>
-    <Card title="Examples" icon="code">
-        Check out examples of how to use GaiaGisService.
-    </Card>
+  <Card title="Installation" icon="download">
+    Learn how to install GaiaGisService in your Angular project.
+  </Card>
+  <Card title="Getting Started" icon="rocket">
+    Follow the guide to get started with GaiaGisService.
+  </Card>
+  <Card title="API Reference" icon="book">
+    Explore the API documentation for GaiaGisService.
+  </Card>
+  <Card title="Examples" icon="code">
+    Check out examples of how to use GaiaGisService.
+  </Card>
 </CardGrid>
