feat: update documentation titles and descriptions; enhance sidebar with new methods section and improve overall clarity

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: GaiaGisService Documentation
-description: Comprehensive guide to using GaiaGisService in your Angular applications.
+title: Gaia Gis  Documentation
+description: Comprehensive guide to using Gaia Gis in your Angular applications (soon for React).
 template: splash
 hero:
-  tagline: Welcome to GaiaGisService Documentation!
+  tagline: Welcome to Gai Gis Documentation!
   image:
     file: ../../assets/houston.webp
   actions:
