fix: correct spelling of "GIS" in documentation title and tagline

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Gaia Gis  Documentation
-description: Comprehensive guide to using Gaia Gis in your Angular applications (soon for React).
+title: Gaia GIS  Documentation
+description: Comprehensive guide to using Gaia GIS in your Angular applications (soon for React).
 template: splash
 hero:
-  tagline: Welcome to Gai Gis Documentation!
+  tagline: Welcome to Gai GIS Documentation!
   image:
     file: ../../assets/logo.webp
   actions:
