fix: correct spelling of "Gaia" in documentation tagline

--- a/documentation/src/content/docs/index.mdx
+++ b/documentation/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: Gaia GIS  Documentation
 description: Comprehensive guide to using Gaia GIS in your Angular applications (soon for React).
 template: splash
 hero:
-  tagline: Welcome to Gai GIS Documentation!
+  tagline: Welcome to Gaia GIS Documentation!
   image:
     file: ../../assets/logo.webp
   actions:
